@@ -17,57 +17,31 @@
 #include <fcntl.h>
 #include "landnd.h"
 
-int do_send(void){
+int do_send(const char *ip){
 	struct stat fileStat;
 	int fd, sockd = -1, is_set = 0;
 	uint32_t fsize = 0, size_to_send = 0, num_of_file = 0;
 	off_t offset = 0;
 	ssize_t rc, tx = 0;
-	static char buffer[2], hash[33], tmp_buf[BUFSIZ];
-	char *ipv4_server = NULL, *tmp_input = NULL, *input_file = NULL, *dup_input = NULL;
+	static char buffer[2], hash[33];
+	char *tmp_input = NULL, *input_file = NULL, *dup_input = NULL;
 	char *token = NULL, *tmp_token = NULL, *file = NULL, *is_gnome = "'";
 	static struct sockaddr_in remote_server_addr;
 	static struct hostent *hp;
-	printf("Write the IPv4 server address: "); /* SE SCRIVE TIPO CUSTOM=HOME ALLORA CERCARE SUL FILE */
-	if(fgets(tmp_buf, BUFSIZ, stdin) == NULL){
-		printf("fgets error\n");
-		return -1;
-	} /* HO DOPPIO INSERIMENTO DI IP CON FGETS E SCANF...VEDERE COME SISTEMARE */
-	token = strtok(tmp_buf, "=");
-	if(strcmp(token, "CUSTOM") == 0){
-		token = strtok(NULL, "\n");
-		ipv4_server = get_ip_from_file(token);
-		if(strcmp(ipv4_server, "ERR") == 0){
-			printf("Cannot get the ip from the file, exiting...\n");
-			return -1;
-		}
-		//goto new_start;
-	}
-	else{
-		token = strtok(tmp_buf, "\n");
-		ipv4_server = (char *)malloc(strlen(token)+1);
-		strcpy(ipv4_server, token);
-	}
-	/*if(scanf("%m[^\n]%*c", &ipv4_server) == EOF){
-		printf("\nscanf ERROR, exiting...\n");
-		return -1;
-	}
-	new_start:*/
+	
 	/* Info sul server remoto */
-	hp = gethostbyname(ipv4_server);
+	hp = gethostbyname(ip);
 	remote_server_addr.sin_family = AF_INET;
 	remote_server_addr.sin_port = 15000;
 	remote_server_addr.sin_addr.s_addr = ((struct in_addr*)(hp->h_addr)) -> s_addr;
 
 	if((sockd = socket(AF_INET, SOCK_STREAM, 0)) < 0){
 		printf("Error during socket creation\n");
-		free(ipv4_server);
 		return -1;
   	}
 
   	if(connect(sockd, (struct sockaddr *) &remote_server_addr, sizeof(remote_server_addr)) < 0){
   		printf("Connection error\n");
-   		free(ipv4_server);
    		close(sockd);
    		return -1;
   	}
@@ -75,7 +49,6 @@ int do_send(void){
 	printf("Drag (or write) the file(s) to send: ");
 	if(scanf("%m[^\n]%*c", &tmp_input) == EOF){
 		printf("\nscanf ERROR, exiting...\n");
-   		free(ipv4_server);
    		close(sockd);
 		return -1;
 	}
@@ -95,7 +68,6 @@ int do_send(void){
 		printf("Failed to send the number of files\n");
 		if(is_set == 1) free(input_file);
 		free(tmp_input);
-		free(ipv4_server);
 		free(input_file);
 		close(sockd);
 		return -1;
@@ -109,7 +81,6 @@ int do_send(void){
 			printf("stat ERROR, exiting...\n");
 			if(is_set == 1) free(input_file);
 			free(tmp_input);
-    		free(ipv4_server);
 			free(input_file);
 			close(sockd);
 			return -1;
@@ -118,7 +89,6 @@ int do_send(void){
 			printf("ERROR: This is a directory not file, exiting...\n");
 			free(tmp_input);
 			if(is_set == 1) free(input_file);
-    		free(ipv4_server);
     		close(sockd);
 			return -1;
 		}
@@ -126,7 +96,6 @@ int do_send(void){
 		fsize = strlen(file)+1;
 		if(send(sockd, &fsize, sizeof(fsize), 0) < 0){
 			printf("Error on sending the file name length\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);
 			close(sockd);
@@ -134,7 +103,6 @@ int do_send(void){
 		}
 		if(send(sockd, file, fsize, 0) < 0){
 			printf("Error on sending the file name\n");
-    		free(ipv4_server);
 	    	if(is_set == 1) free(input_file);
     		free(tmp_input);
 			close(sockd);
@@ -143,7 +111,6 @@ int do_send(void){
 		fsize = fileStat.st_size;
 		if(send(sockd, &fsize, sizeof(fsize), 0) < 0){
 			printf("Error on sending the file size\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);	
 			close(sockd);
@@ -152,7 +119,6 @@ int do_send(void){
 		printf("Waiting for server confirmation...\n");
 		if(recv(sockd, buffer, 2, 0) < 0){
 			printf("Error on receiving Y or N\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);	
 			close(sockd);
@@ -160,7 +126,6 @@ int do_send(void){
 		}
 		if(strcmp(buffer, "N") == 0){
 			printf("The server has aborted the file transfer\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);	
 			close(sockd);
@@ -169,7 +134,6 @@ int do_send(void){
   		fd = open(tmp_token, O_RDONLY);
   		if(fd < 0){
 	   		printf("Error on opening file\n");
-   			free(ipv4_server);
    			if(is_set == 1) free(input_file);
    			free(tmp_input);	  
 	  		close(sockd);
@@ -183,7 +147,6 @@ int do_send(void){
 	    		printf("Error on sendfile");
       			close(fd);
   	  			if(is_set == 1) free(input_file);
-      			free(ipv4_server);      	
       			free(tmp_input);
       			close(sockd);
       			return -1;
@@ -198,7 +161,6 @@ int do_send(void){
   		strcpy(hash, file_md5);
   		if(send(sockd, hash, 33, 0) < 0){
 			printf("Error on sending file hash\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);
     		free(file_md5);	
@@ -207,7 +169,6 @@ int do_send(void){
 		}
   		if(recv(sockd, buffer, 2, 0) < 0){
 			printf("Error on receiving file hash confirmation\n");
-    		free(ipv4_server);
     		if(is_set == 1) free(input_file);
     		free(tmp_input);
     		free(file_md5);	
@@ -229,7 +190,6 @@ int do_send(void){
   	}
   	free(tmp_input);
  	if(is_set == 1) free(input_file);
-	free(ipv4_server);
 	close(sockd);
 	return 0;
 }
