@@ -3,11 +3,11 @@
 
 #define VERSION "1.1.0-alpha"
 
-int do_send(void);
-int do_recv(const int);
+int do_send(const char *);
+int do_recv(const char *);
 int get_ipv4(void);
-int get_connected_ip(void);
-char *get_ip_from_file(char *);
+int get_connected_ip(const char *);
+int do_action(int, const char *);
 char *check_md5(char *);
 void remove_char(char *, const char);
 void replace_space_with_vbar(char *);
